# SQLAlchemy_practice

./: .pre-commit-config.yaml  README.md  pyproject.toml  test_data.sql
src/: config.py  database.py  main.py  models.py
src/queries/: core.py  orm.py
